--- a/neuralai/index.html
+++ b/neuralai/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NeuralPay - AI Services & Crypto Payments</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
 <script type="importmap">
 {
   "imports": {
@@ -504,7 +504,7 @@
     </div>
 
 
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="./index.js"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
