--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NeuralPay - AI Services & Crypto Payments</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="index.css">
 <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://cdn.jsdelivr.net/npm/@google/genai@1.19.0/dist/index.mjs"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0"
   }
 }
 </script>
@@ -504,7 +504,7 @@
     </div>
 
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="index.js"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
