--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0"
+    "@google/genai": "https://cdn.jsdelivr.net/npm/@google/genai@1.19.0/dist/index.mjs"
   }
 }
 </script>
